--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Brahma <span>R$ 8,50</span></h3>
           </li>
           <li>
-            <h3>Heiniken <span>R$ 12,00</span></h3>
+            <h3>Heineken <span>R$ 12,00</span></h3>
           </li>
           <li>
             <h3>Eisenbahn <span>R$ 8,00</span></h3>
@@ -98,7 +98,7 @@
             <h3>Aperol <span>R$ 25,00</span></h3>
           </li>
           <li>
-            <h3>Caipinha <span>R$ 20,00</span></h3>
+            <h3>Caipirinha <span>R$ 20,00</span></h3>
           </li>
           <li>
             <h3>Caipicerva <span>R$ 25,00</span></h3>
@@ -107,7 +107,7 @@
             <h3>Batida de Vinho <span>R$ 20,00</span></h3>
           </li>
           <li>
-            <h3>Caipinha de Yakult <span>R$ 25,00</span></h3>
+            <h3>Caipirinha de Yakult <span>R$ 25,00</span></h3>
           </li>
           <li>
           <h3>Mojito de Morango <span>R$ 25,00</span></h3>
@@ -116,7 +116,7 @@
             <h3>Gin Morango e Halls <span>R$ 25,00</span></h3>
           </li>
           <li>
-            <h3>caipinha de Gin <span>R$ 25,00</span></h3>
+            <h3>caipirinha de Gin <span>R$ 25,00</span></h3>
           </li>
           <li>
             <h3>Daiquiri de Morango <span>R$ 25,00</span></h3>
